fix pom.xml + enhance service